お知らせ作成

--- a/index.html
+++ b/index.html
@@ -177,10 +177,48 @@
             </div>
         </div>
     </section>
-    <section id="News"></section>
-    <section id="Faq"></section>
-    <section id="Access"></section>
-    <section id="Contact"></section>
+    <section id="News">
+        <div class="wrapper">
+            <h2 class="section__ttl">お知らせ</h2>
+            <div class="section__contents">
+                <ul class="news__list">
+                    <li class="news__list--item">
+                        <time class="news__date">2023/06/12</time>
+                        <a href="#" class="news__ttl">闇落ちイチゴの販売を開始します。</a>
+                    </li>
+                    <li class="news__list--item">
+                        <time class="news__date">2023/05/14</time>
+                        <a href="#" class="news__ttl">NHK「うまいッ！（全国放送）」 に蓼科ごとう農園が登場。</a>
+                    </li>
+                    <li class="news__list--item">
+                        <time class="news__date">2023/04/14</time>
+                        <a href="#" class="news__ttl">白樺湖直売所で、新鮮な春野菜と果物を販売しています</a>
+                    </li>
+                </ul>
+                <figure class="middle__img">
+                    <img src="./assets/images/grapes-middle.png" alt="ぶどう">
+                </figure>
+            </div>
+        </div>
+    </section>
+    <section id="Faq">
+        <div class="wrapper">
+            <h2 class="section__ttl">FAQ</h2>
+            <div class="section__contents"></div>
+        </div>
+    </section>
+    <section id="Access">
+        <div class="wrapper">
+            <h2 class="section__ttl">アクセス</h2>
+            <div class="section__contents"></div>
+        </div>
+    </section>
+    <section id="Contact">
+        <div class="wrapper">
+            <h2 class="section__ttl">ここにタイトル</h2>
+            <div class="section__contents"></div>
+        </div>
+    </section>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/swiper/swiper-bundle.js"></script>
     <script src="./assets/js/index.js"></script>
