FAQ一旦終わり

--- a/index.html
+++ b/index.html
@@ -204,7 +204,43 @@
     <section id="Faq">
         <div class="wrapper">
             <h2 class="section__ttl">FAQ</h2>
-            <div class="section__contents"></div>
+            <div class="section__contents">
+                <ul class="faq__list">
+                    <li class="faq__list--item">
+                        <details>
+                            <summary><p>冷蔵便で配送できますか？</p></summary>
+                            <p>冷蔵便に対応しています。その場合別途150円かかります。</p>
+                          </details>
+                    </li>
+                    <li class="faq__list--item">
+                        <details>
+                            <summary><p>どのような支払い方法がありますか？</p></summary>
+                            <p>商品代引きとクレジットカード決済があります。代引き手数料は、10,800円未満で税込330円・10,800円以上32,400円未満で税込440円・32,400円以上102,400円未満で税込660円です。手数料はお客様のご負担となりますのでご了承ください。クレジットカード決済は、JCB・VISA・master・ダイナース・アメリカンエキスプレスのマークが入っているカードすべてご利用になれます。</p>
+                          </details>
+                    </li>
+                    <li class="faq__list--item">
+                        <details>
+                            <summary><p>プレゼント用にラッピングすることはできますか？</p></summary>
+                            <p>可能です。ラッピングが必要な場合は、購入時にフォームの「ラッピングを希望」にチェックを入れてください。</p>
+                          </details>
+                    </li>
+                    <li class="faq__list--item">
+                        <details>
+                            <summary><p>いちご狩りの予約は必要ですか</p></summary>
+                            <p>繁忙期（１～３月、GW期間中）の土日祝日は予約はご遠慮いただいておりますが、平日または繁忙期以外の土日祝日はご予約可能です。</p>
+                          </details>
+                    </li>
+                    <li class="faq__list--item">
+                        <details>
+                            <summary><p>海外発送できますか？</p></summary>
+                            <p>現在のところ対応できておりません。海外からのご注文で日本国内への発送は承っております。</p>
+                          </details>
+                    </li>
+                </ul>
+                <figure class="middle__img">
+                    <img src="./assets/images/breakfast-middle.png" alt="朝ごはん">
+                </figure>
+            </div>
         </div>
     </section>
     <section id="Access">
