アクセス作成

--- a/index.html
+++ b/index.html
@@ -246,13 +246,35 @@
     <section id="Access">
         <div class="wrapper">
             <h2 class="section__ttl">アクセス</h2>
-            <div class="section__contents"></div>
+            <div class="section__contents">
+                <ul class="accessInfo">
+                    <li class="accessInfo__row">
+                        <p class="accessInfo__row__ttl">会社名</p>
+                        <p class="accessInfo__row__val">蓼科ごとう農園</p>
+                    </li>
+                    <li class="accessInfo__row">
+                        <p class="accessInfo__row__ttl">代表者名</p>
+                        <p class="accessInfo__row__val">後藤 優香</p>
+                    </li>
+                    <li class="accessInfo__row">
+                        <p class="accessInfo__row__ttl">所在地</p>
+                        <p class="accessInfo__row__val">長野県茅野市北山×××××</p>
+                    </li>
+                    <li class="accessInfo__row">
+                        <p class="accessInfo__row__ttl">E-mail</p>
+                        <p class="accessInfo__row__val">tateshina-goto@gmail.com</p>
+                    </li>
+                </ul>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206405.99281755314!2d138.10681713186653!3d36.066820098088634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601c4e5d08f6a63d%3A0xf7d929f1922a7056!2z44CSMzkxLTAzMDEg6ZW36YeO55yM6IyF6YeO5biC5YyX5bGx!5e0!3m2!1sja!2sjp!4v1694345798938!5m2!1sja!2sjp" width="443" height="334" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </div>
     </section>
     <section id="Contact">
         <div class="wrapper">
-            <h2 class="section__ttl">ここにタイトル</h2>
-            <div class="section__contents"></div>
+            <h2 class="section__ttl">お問い合わせ</h2>
+            <div class="section__contents">
+                <p class="description">ご購入・販売に関しましては、下記よりお気軽にお問い合わせください。</p>
+            </div>
         </div>
     </section>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
