セクション間の画像調整

--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                         <a href="#" class="news__ttl">白樺湖直売所で、新鮮な春野菜と果物を販売しています</a>
                     </li>
                 </ul>
-                <figure class="middle__img">
-                    <img src="./assets/images/grapes-middle.png" alt="ぶどう">
-                </figure>
             </div>
         </div>
+        <figure class="section__img">
+            <img src="./assets/images/grapes-middle.png" alt="ぶどう">
+        </figure>
     </section>
     <section id="Faq">
         <div class="wrapper">
@@ -237,11 +237,11 @@
                           </details>
                     </li>
                 </ul>
-                <figure class="middle__img">
-                    <img src="./assets/images/breakfast-middle.png" alt="朝ごはん">
-                </figure>
             </div>
         </div>
+        <figure class="section__img">
+            <img src="./assets/images/breakfast-middle.png" alt="朝ごはん">
+        </figure>
     </section>
     <section id="Access">
         <div class="wrapper">
@@ -268,6 +268,9 @@
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d206405.99281755314!2d138.10681713186653!3d36.066820098088634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601c4e5d08f6a63d%3A0xf7d929f1922a7056!2z44CSMzkxLTAzMDEg6ZW36YeO55yM6IyF6YeO5biC5YyX5bGx!5e0!3m2!1sja!2sjp!4v1694345798938!5m2!1sja!2sjp" width="443" height="334" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
+        <figure class="section__img">
+            <img src="./assets/images/Brussels_sprouts-middle.png" alt="朝ごはん">
+        </figure>
     </section>
     <section id="Contact">
         <div class="wrapper">
