お問い合わせ完成かな

--- a/index.html
+++ b/index.html
@@ -357,8 +357,8 @@
                             <input type="submit" class="submit-btn" value="送信する">
                         </div>
                     </form>
-                    <p class="end-message">お問い合わせありがとうございました</p>
-                    <p class="false-message">送信失敗です</p>
+                    <p class="end-message">送信完了しました。<br class="is-sp">ありがとうございました。</p>
+                    <p class="false-message">送信できませんでした。時間を置いて再度お問い合わせしてください。</p>
                 </div>
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
             </div>
