フッター作成

--- a/index.html
+++ b/index.html
@@ -364,6 +364,28 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <nav class="footerMenu">
+            <div class="footerMenu__image">
+                <figure>
+                    <img src="./assets/images/logo-01.svg" alt="牛さんマーク">
+                </figure>
+                <figure><img src="./assets/images/logo-02.png" alt="蓼科ごとう農園"></figure>    
+            </div>
+            <ul>
+                <li><a href="#About" class="footerMenu__link">この農園について</a></li> 
+                <li><a href="#Product" class="footerMenu__link">製品一覧</a></li> 
+                <li><a href="#News" class="footerMenu__link">お知らせ</a></li> 
+                <li><a href="#Faq" class="footerMenu__link">FAQ</a></li> 
+                <li><a href="#Access" class="footerMenu__link">アクセス</a></li> 
+                <li><a href="#Contact" class="footerMenu__link">お問い合わせ</a></li> 
+            </ul>
+        </nav>
+        <div class="footer__copyright">
+            <p class="copyright">©︎ 2019 GOTONOUEN.</p>
+        </div>
+    </footer>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/swiper/swiper-bundle.js"></script>
     <script src="./assets/js/index.js"></script>
