フッター作成

--- a/index.html
+++ b/index.html
@@ -366,23 +366,21 @@
     </section>
 
     <footer class="footer">
-        <nav class="footerMenu">
-            <div class="footerMenu__image">
-                <figure>
-                    <img src="./assets/images/logo-01.svg" alt="牛さんマーク">
-                </figure>
-                <figure><img src="./assets/images/logo-02.png" alt="蓼科ごとう農園"></figure>    
-            </div>
-            <ul>
-                <li><a href="#About" class="footerMenu__link">この農園について</a></li> 
-                <li><a href="#Product" class="footerMenu__link">製品一覧</a></li> 
-                <li><a href="#News" class="footerMenu__link">お知らせ</a></li> 
-                <li><a href="#Faq" class="footerMenu__link">FAQ</a></li> 
-                <li><a href="#Access" class="footerMenu__link">アクセス</a></li> 
-                <li><a href="#Contact" class="footerMenu__link">お問い合わせ</a></li> 
+        <figure class="footerImage">
+            <img src="./assets/images/logo-01.svg" alt="牛さんマーク">
+            <img src="./assets/images/logo-02.png" alt="蓼科ごとう農園">
+        </figure>
+        <nav class="wrapper footerMenu__wrapper">
+            <ul class="footerMenu">
+                <li class="footerMenu__item"><a href="#About" class="footerMenu__item--link">この農園について</a></li> 
+                <li class="footerMenu__item"><a href="#Product" class="footerMenu__item--link">製品一覧</a></li> 
+                <li class="footerMenu__item"><a href="#News" class="footerMenu__item--link">お知らせ</a></li> 
+                <li class="footerMenu__item"><a href="#Faq" class="footerMenu__item--link">FAQ</a></li> 
+                <li class="footerMenu__item"><a href="#Access" class="footerMenu__item--link">アクセス</a></li> 
+                <li class="footerMenu__item"><a href="#Contact" class="footerMenu__item--link">お問い合わせ</a></li> 
             </ul>
         </nav>
-        <div class="footer__copyright">
+        <div class="footerCopyright">
             <p class="copyright">©︎ 2019 GOTONOUEN.</p>
         </div>
     </footer>
