フッター&ハンバーガーメニュー作成

--- a/index.html
+++ b/index.html
@@ -380,6 +380,14 @@
                 <li class="footerMenu__item"><a href="#Contact" class="footerMenu__item--link">お問い合わせ</a></li> 
             </ul>
         </nav>
+        <div class="section__img--wrapper">
+            <figure class="section__img footer__img--1">
+                <img src="./assets/images/strawberry-middle.png" alt="いちご">
+            </figure>
+            <figure class="section__img footer__img--2">
+                <img src="./assets/images/livestock-middle.png" alt="牛さん">
+            </figure>    
+        </div>
         <div class="footerCopyright">
             <p class="copyright">©︎ 2019 GOTONOUEN.</p>
         </div>
