ローディング作成

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- TODO：Basic認証もちゃんとかかっているか、本番環境で確認をお願いします。 -->
 </head>
 <body>
+    <div id="loading">
+        <div class="spinner"></div>
+    </div>
     <div class="fv">
         <div class="fv__wrapper">
             <span class="fv__txt">あなたは知ってる？</span>
