背景とお問い合わせ

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </section>
-    <section id="Product">
+    <section id="Product" class="bg-on">
         <div class="wrapper">
             <h2 class="section__ttl">製品一覧</h2>
             <div class="section__contents">
@@ -204,7 +204,7 @@
             <img src="./assets/images/grapes-middle.png" alt="ぶどう">
         </figure>
     </section>
-    <section id="Faq">
+    <section id="Faq" class="bg-on">
         <div class="wrapper">
             <h2 class="section__ttl">FAQ</h2>
             <div class="section__contents">
@@ -275,11 +275,11 @@
             <img src="./assets/images/Brussels_sprouts-middle.png" alt="朝ごはん">
         </figure>
     </section>
-    <section id="Contact">
+    <section id="Contact" class="bg-on">
         <div class="wrapper">
             <h2 class="section__ttl">お問い合わせ</h2>
             <div class="section__contents">
-                <p class="description">ご購入・販売に関しましては、下記よりお気軽にお問い合わせください。</p>
+                <p class="description">ご購入・販売に関しましては、<br class="is-sp">下記よりお気軽にお問い合わせください。</p>
                 <div class="form__wrapper">
                     <h3 class="form__ttl">お問い合わせメールフォーム</h3>
                     <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScn_vA9kT7phdBv28iyhnnducKa6IqIT3p_nHsAmCELzHajRw/formResponse" id="contactForm">
@@ -367,7 +367,6 @@
             </div>
         </div>
     </section>
-
     <footer class="footer">
         <figure class="footerImage">
             <img src="./assets/images/logo-01.svg" alt="牛さんマーク">
