製品一覧修正

--- a/index.html
+++ b/index.html
@@ -174,6 +174,39 @@
                                 <p class="product__price">￥ 4,200（税込）</p>
                             </li>            
                         </div>
+                        <div class="swiper-slide">
+                            <li class="product__list--item">
+                                <figure class="product__img">
+                                    <img src="./assets/images/strawberries.png" alt="">
+                                </figure>
+                                <h3 class="product__ttl">
+                                    <a href="#">「あいまりん」「サマープリンセス」「サマーリリカル」「よつぼし」など詰め合わせ10パック</a>
+                                </h3>
+                                <p class="product__price">￥ 4,800（税込）</p>
+                            </li>            
+                        </div>
+                        <div class="swiper-slide">
+                            <li class="product__list--item">
+                                <figure class="product__img">
+                                    <img src="./assets/images/grapes.png" alt="">
+                                </figure>
+                                <h3 class="product__ttl">
+                                    <a href="#">蓼科ごとう農園オリジナル品種の「シャインマスカット」と「ナガノパープル」500g</a>
+                                </h3>
+                                <p class="product__price">￥ 7,700（税込）</p>
+                            </li>            
+                        </div>
+                        <div class="swiper-slide">
+                            <li class="product__list--item">
+                                <figure class="product__img">
+                                    <img src="./assets/images/brussels-sprouts.png" alt="">
+                                </figure>
+                                <h3 class="product__ttl">
+                                    <a href="#">標高1,000mオーバーの蓼科高原だからこその、あまあま芽キャベツ!! 1kg</a>
+                                </h3>
+                                <p class="product__price">￥ 4,200（税込）</p>
+                            </li>            
+                        </div>
 
                     </div>
                 </div>        
