--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>長野県茅野市の農園 | 蓼科ごとう農園</title>
-    <meta name=”description” content=”「蓼科ごとう農園」は、蓼科の新鮮な農産物を提供するだけでなく、蓼科の自然環境を大切に守り、後世に残すことを使命としています。” />
+    <meta name=description content=「蓼科ごとう農園」は、蓼科の新鮮な農産物を提供するだけでなく、蓼科の自然環境を大切に守り、後世に残すことを使命としています。 />
     <meta name="robots" content="noindex">
+    <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32×32 -->
+    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="./assets/css/vendor/destyle.css">
     <link rel="stylesheet" href="./assets/css/vendor/swiper-bundle.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -322,7 +326,7 @@
                             </div>
                             <div class="form__elm--container">
                                 <div class="form__elm--child">
-                                    <input type="radio" id="product" name="entry.1892016494" required value="弊社製品について">
+                                    <input type="radio" id="product" name="entry.1892016494" required value="弊社製品について" checked>
                                     <label for="product">弊社製品について</label>
                                 </div>
                                 <div class="form__elm--child">
