スムーススクロール実装

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <figure><img src="./assets/images/logo-02.png" alt="蓼科ごとう農園"></figure>
                         </a>
                     </li>
-                    <li class="gnav__list--item is-pc"><a href="#Faq"></a>FAQ</li>
+                    <li class="gnav__list--item is-pc"><a href="#Faq">FAQ</a></li>
                     <li class="gnav__list--item is-pc"><a href="#Access">アクセス</a></li>
                     <li class="gnav__list--item is-pc"><a href="#Contact">お問い合わせ</a></li>
                 </ul>
