--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>長野県茅野市の農園 | 蓼科ごとう農園</title>
     <meta name=description content=「蓼科ごとう農園」は、蓼科の新鮮な農産物を提供するだけでなく、蓼科の自然環境を大切に守り、後世に残すことを使命としています。 />
     <meta name="robots" content="noindex">
-    <link rel="icon" href="/favicon.ico" sizes="any"><!-- 32×32 -->
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- 180×180 -->
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" href="./favicon.ico" sizes="any"><!-- 32×32 -->
+    <link rel="icon" href="./icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="./assets/css/vendor/destyle.css">
     <link rel="stylesheet" href="./assets/css/vendor/swiper-bundle.css">
     <link rel="stylesheet" href="./assets/css/style.css">
