--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico" sizes="any"><!-- 32×32 -->
     <link rel="icon" href="./icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./apple-touch-icon.png"><!-- 180×180 -->
-    <link rel="manifest" href="./manifest.webmanifest">
+    <link rel="manifest" href="./manifest.webmanifest" crossorigin="use-credentials">
     <link rel="stylesheet" href="./assets/css/vendor/destyle.css">
     <link rel="stylesheet" href="./assets/css/vendor/swiper-bundle.css">
     <link rel="stylesheet" href="./assets/css/style.css">
