アコーディオンとテキスト修正

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
             <div class="section__contents">
                 <ul class="faq__list">
                     <li class="faq__list--item">
-                        <details>
-                            <summary><p>冷蔵便で配送できますか？</p></summary>
+                        <details class="js-details">
+                            <summary class="js-summary"><p>冷蔵便で配送できますか？</p></summary>
                             <p>冷蔵便に対応しています。その場合別途150円かかります。</p>
                           </details>
                     </li>
