アコーディオン調整

--- a/index.html
+++ b/index.html
@@ -36,26 +36,26 @@
         <div class="header__lower">
             <nav class="gnav">
                 <ul class="gnav__list">
-                    <li class="gnav__list--item is-pc"><a href="#About">この農園について</a></li>
-                    <li class="gnav__list--item is-pc"><a href="#Product">製品一覧</a></li>
-                    <li class="gnav__list--item is-pc"><a href="#News">お知らせ</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#About">この農園について</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#Product">製品一覧</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#News">お知らせ</a></li>
                     <li class="gnav__list--item">
                         <a href="/">
                             <figure><img src="./assets/images/logo-02.png" alt="蓼科ごとう農園"></figure>
                         </a>
                     </li>
-                    <li class="gnav__list--item is-pc"><a href="#Faq">FAQ</a></li>
-                    <li class="gnav__list--item is-pc"><a href="#Access">アクセス</a></li>
-                    <li class="gnav__list--item is-pc"><a href="#Contact">お問い合わせ</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#Faq">FAQ</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#Access">アクセス</a></li>
+                    <li class="gnav__list--item dispOver1031"><a href="#Contact">お問い合わせ</a></li>
                 </ul>
             </nav>
         </div>
-        <div id="hamburgerBtn" class="is-sp openbtn">
+        <div id="hamburgerBtn" class="dispUnder1031 openbtn">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <nav id="hamburgerMenu" class="is-sp">
+        <nav id="hamburgerMenu" class="dispUnder1031">
             <div id="hamburgerMenuList">
                 <div class="hamburgerMenu__contents">
                     <div class="hamburgerMenu__image">
